# orbital

./: .gitignore  README.md  pyproject.toml
docs/: PRODUCT_SPEC.md  README.md  ROADMAP.md  TECH_SPEC.md  TODO.md
manual_test/: run_manual_smoke.sh
src/orbital_mcp/: __init__.py  acp_conformance.py  agent_log_telemetry.py  cli.py  config.py  delegation_report.py  dialogue.py  errors.py  events.py  guidance.py  liveness.py  model_log_telemetry.py  models.py  permissions.py  policy.py  profiles.py  run_store.py  server.py  service.py  setup_cli.py  smoke.py  snapshots.py  store.py  task_prompt.py  telemetry.py  watch.py
src/orbital_mcp/adapters/: __init__.py  acp.py  base.py  claude_cli.py
tests/: orbital_test_helpers.py  test_docs_todo.py  test_external_agent_log_telemetry.py  test_orbital_core.py  test_validation_acp_conformance.py  test_validation_contracts_storage.py  test_validation_deterministic.py  test_validation_fake_acp.py  test_validation_mcp_transport.py  test_validation_optional_smoke.py
tests/fixtures/: fake_acp_harness.py  fake_claude_cli.py
tests/fixtures/acp_conformance/: codex_legacy_smoke.json  codex_official_malformed_unknown.json  codex_official_permission_gap.json  (+18 more)
tests/manual/: run_manual_faux_harness_smoke.sh  run_manual_local_codex_acp_permission_smoke.sh  run_manual_local_codex_acp_smoke.sh  run_manual_local_opencode_acp_permission_smoke.sh  run_manual_local_opencode_acp_smoke.sh  run_manual_official_codex_acp_permission_smoke.sh  run_manual_official_codex_acp_smoke.sh  run_manual_smoke.sh  run_permission_probe.py  run_token_probe.py
