[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-mcp"
version = "0.1.0"
description = "Local MCP routing layer for ACP-compatible coding harness delegation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
orbital = "orbital_mcp.setup_cli:main"
orbital-mcp = "orbital_mcp.cli:main"
orbital-mcp-smoke = "orbital_mcp.smoke:main"
orbital-watch = "orbital_mcp.watch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
